--- a/src/App.scss
+++ b/src/App.scss
@@ -1,17 +1,9 @@
 .App {
   text-align: center;
+  color : blueviolet;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
 
 .App-header {
   background-color: #282c34;
@@ -36,3 +28,4 @@
     transform: rotate(360deg);
   }
 }
+@import "~bootstrap/scss/bootstrap";
